feat: add athlete profile api
